...
            colors = IconButtonDefaults.outlinedIconButtonColors(
                containerColor = MaterialTheme.colorScheme.onSurface.copy(alpha = 0.4f),
                contentColor = MaterialTheme.colorScheme.primary,
                disabledContentColor = MaterialTheme.colorScheme.onSurface.copy(alpha = 0.4f)
            )
        ) {
            Icon(Icons.Default.Close, "Close Preview")
        }
    }
}

@Composable
fun LoadedState(contentId: String) {
...
