...
                .navigationBarsPadding()
                .padding(end = 16.dp, bottom = 16.dp)
                .size(56.dp)
        ) {
            Icon(
                imageVector = ImageVector.vectorResource(id = R.drawable.qr_code_24px),
                contentDescription = "Preview",
                tint = MaterialTheme.colorScheme.onPrimary
            )
        }
    }
}

...
